--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -1,12 +1,11 @@
 auto-update-channel = tip
 
+# Name as stated from: ghostty --list-fonts
 {{- if eq .chezmoi.os "darwin" }}
-# Font settings for macOS
 font-family = FiraCode Nerd Font Mono
 font-size = 14.5
 font-feature = +liga,+dlig,+calt
 {{- else if eq .chezmoi.os "linux" }}
-# Font settings for Linux
 font-family = FiraCode Nerd Font Mono
 font-size = 14.5
 font-feature = +liga,+dlig,+calt
@@ -16,6 +15,8 @@ font-feature = +liga,+dlig,+calt
 theme = dracula
 background-opacity = 0.9
 background-blur = 10
+
+# term = xterm-256color
 
 window-width = 132
 window-height = 40
@@ -33,8 +34,12 @@ scrollback-limit = 134217728
 shell-integration = detect
 shell-integration-features = cursor,sudo,title,path
 
+# Can't make up my mind about this one
+# window-inherit-working-directory = false
+
 {{- if eq .chezmoi.os "darwin" }}
-# macOS-specific settings
+
+# MacOS-specific settings
 macos-titlebar-style = native
 macos-icon = glass
 macos-icon-frame = chrome
@@ -42,8 +47,12 @@ macos-icon-frame = chrome
 keybind = cmd+plus=increase_font_size:1
 keybind = cmd+minus=decrease_font_size:1
 keybind = cmd+0=reset_font_size
+
 {{- else if eq .chezmoi.os "linux" }}
-# Linux-specific keybinds
+
+# Linux-specific settings
+linux-icon = glass
+
 keybind = ctrl+plus=increase_font_size:1
 keybind = ctrl+minus=decrease_font_size:1
 keybind = ctrl+0=reset_font_size
